--- a/WarmUp9/styles.css
+++ b/WarmUp9/styles.css
@@ -2,9 +2,8 @@ body {
 		background-color: blue;
 }
 #Button2{
-	font-family: fantasy;
+	font-family: cursive;
 }
 #Button1{
 font-family: arial;
 }
-body {background-color: red;}
